hphp/test/zend/bad/ext/dom/tests/DOMDocumentFragment_appendXML_error_002.php
<?php
$fragment = new DOMDocumentFragment();
$fragment->appendXML('<bait>crankbait</bait>');
$document->appendChild($fragment);
?>
